--- a/gameengine-editor/src/main/webapp/css/welcome.css
+++ b/gameengine-editor/src/main/webapp/css/welcome.css
@@ -40,7 +40,7 @@ body {
 .infoblock {
   flex-grow: 1;
   border: 1px solid #505050;
-  background-color: white;
+  background-color: #141414;
 }
 .infoblock .title {
   font-weight: bold;
@@ -49,27 +49,26 @@ body {
   padding: 0.3em;
 }
 .infoblock .infoblockcontent {
-  background-color: white;
+  background-color: #141414;
   text-align: left;
   margin: 0.1em;
 }
 .infoblock .infoblockcontent .entry {
-  background-color: white;
-  padding: 0.3em;
+  color: #b1b2b2;
 }
 .project {
   padding-left: 2.5em;
   min-height: 32px;
   line-height: 32px;
   vertical-align: middle;
-  border: 0.1em white;
+  border-bottom: 1px solid #292929;
+  color: #b1b2b2;
 }
 .project:hover {
-  background-color: #b1b6bd;
-  border: 0.1em #b1b6bd;
+  background-color: #292929;
 }
 .github {
-  background-image: url("GitHub-Mark-32px.png");
+  background-image: url("octocat.png");
   background-repeat: no-repeat;
   background-position: left top;
 }
@@ -84,11 +83,11 @@ body {
 }
 .githubrepositoryselection .continue {
   margin-top: 1em;
-  background-image: url("ic_open_in_browser_black_48dp.png");
+  background-image: url("openinbrowser.png");
   background-repeat: no-repeat;
   background-position: left top;
-  background-size: 32px 32px;
+  background-size: 36px 36px;
   padding-left: 2.5em;
-  min-height: 32px;
-  line-height: 32px;
+  min-height: 36px;
+  line-height: 36px;
 }
